--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -4,6 +4,9 @@ $modal-labelHeight: $_lineHeight-large;
 
 	width: 100%;
 	height: 100%;
+	position: absolute;
+	bottom: 100%;
+	visibility: hidden;
 	@include enterTop;
 
 	&__inner {
@@ -45,6 +48,8 @@ $modal-labelHeight: $_lineHeight-large;
 
 	&--enterBottom {
 
+		bottom: auto;
+		top: 100%;
 		@include enterBottom;
 
 		.modal-exit-active {
